# bambloo-abstraction

./: CMakeLists.txt  README.md  README.rst
common/: CMakeLists.txt
common/include/: common.h  operations.h  result.h  secmem.h
common/sources/: secmem.cxx
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt
examples/common/sources/: main.cxx
examples/mathamatics/: CMakeLists.txt
examples/mathamatics/sources/: main.cxx
mathematics/: CMakeLists.txt
mathematics/include/: definition.h  integer.h  number.h
mathematics/sources/: integer.cxx  number.cxx
